[gd_scene load_steps=10 format=3 uid="uid://b1r2ki1s3b5eq"]

[ext_resource type="Texture2D" uid="uid://bmholru2c731v" path="res://assets/ships/PNG/Spaceships/06/Spaceship_06_BLUE.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dmvjdh51jobnu" path="res://assets/ships/PNG/Flame_02.png" id="2"]
[ext_resource type="Texture2D" uid="uid://itbq50m7x820" path="res://assets/ships/PNG/Flame_01.png" id="3"]
[ext_resource type="Script" uid="uid://sq2or7sb5e3x" path="res://src/Player/Player.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://c1n5nhrbr3xo3" path="res://assets/explosions/explosion-6.png" id="5"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"defaul",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="2"]
radius = 205.991

[sub_resource type="Animation" id="3"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 25.1067),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.594604, 2.07053),
"update": 0,
"values": [0, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.435275, 3.24901),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dd31a"]
_data = {
&"Die": SubResource("3")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 6
script = ExtResource("4")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(150, -62)

[node name="BulletPoint2" type="Node2D" parent="."]
position = Vector2(150, 62)

[node name="Fire" type="AnimatedSprite2D" parent="."]
position = Vector2(-110.079, 0)
rotation = 1.5708
sprite_frames = SubResource("1")
animation = &"defaul"

[node name="Body" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PackedVector2Array(-150.911, -1.85641, -131.311, -14.329, -76.0758, -19.6744, -73.4031, -70.4556, -27.0764, -107.873, 37.0684, -106.092, 76.2679, -74.9101, 80.7224, -17.8926, 133.285, -15.2199, 152.885, -6.31091, 152.885, 130.887, 111.013, 129.106, 50.4318, 92.5788, -45.7852, 89.9062, -107.257, 129.106, -151.802, 129.106)

[node name="EnemyDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
rotation = 1.5708
shape = SubResource("2")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -123.817
offset_top = -232.554
offset_right = -78.8174
offset_bottom = -218.554
scale = Vector2(5, 5)
text = "HP: %s"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dd31a")
}

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
scale = Vector2(8, 8)
texture = ExtResource("5")
hframes = 8

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_body_entered"]
